# colorsynth

./: README.md  pyproject.toml
.github/workflows/: black.yml  publish.yml  tests.yml
colorsynth/: __init__.py  _colorsynth.py
colorsynth/_tests/: test_colorsynth.py
colorsynth/data/: std65.txt
docs/: conf.py  index.rst  refs.bib
