[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "colorsynth"
authors = [
    {name = "Roy T. Smart", email = "roytsmart@gmail.com"},
]
description = "A Python library for creating false-color images from arrays of spectral radiance"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "numpy",
    "matplotlib",
    "astropy",
]
dynamic = ["version"]

[project.optional-dependencies]
test = [
    "pytest",
]
doc = [
    "pytest",
    "graphviz",
    "sphinx-autodoc-typehints",
    "sphinxcontrib-bibtex",
    "pydata-sphinx-theme",
    "ipykernel",
    "jupyter-sphinx",
    "sphinx-favicon",
    "scipy",
    "astroscrappy",
]

[project.urls]
Homepage = "https://github.com/sun-data/colorsynth"
Documentation = "https://colorsynth.readthedocs.io/en/latest"

[tool.setuptools_scm]

[tool.setuptools.package-data]
colorsynth = ["py.typed"]
